[tool.poetry]
name = "http_manual_barista"
version = "0.1.0"
description = ""
authors = ["Leandro Gabriel <lassisg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.0"
requests = "^2.23.0"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"